[package]
name = "eth_logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "3", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
ethers = { version = "2.0", features = ["ws"] }
eyre = "0.6.8"
log = "0.4.20"
postgres-types = "0.2.6"
rust_decimal = "1.32.0"
serde = "1.0.188"
testcontainers = "0.14.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"

